# terminal-hacker

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md
attached_assets/: Pasted--workspace-frontend-npm-run-dev-terminal-hacker-1-0-0-dev-vite-VITE-v5-4-14-ready-in--1741868474053.txt
backend/python-tools/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
backend/python-tools/src/: __init__.py  bruteforce.py  network_scanner.py  server.py
backend/python-tools/tests/: test_bruteforce.py  test_network_scanner.py
backend/rust-core/: Cargo.toml  README.md
backend/rust-core/src/: lib.rs
backend/rust-core/tests/: test_game_state.rs
frontend/: .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: 404.html  500.html  CNAME  browserconfig.xml  humans.txt  index.html  maintenance.html  manifest.json  offline.html  pgp-key.txt  security-policy.txt  security.txt  service-worker.js  sitemap.xml
frontend/public/.well-known/: apple-app-site-association  assetlinks.json  brave-rewards-verification.txt  change-password  did.json  dnt-policy.txt  host-meta  host-meta.json  keybase.txt  microsoft-identity-association.json  nodeinfo  nostr.json  robots.txt  security-contacts.txt  security.asc  security.txt  security.txt.sig  webfinger
frontend/public/.well-known/matrix/: client  server
frontend/src/: App.css  App.tsx  index.css  index.tsx  store.ts
frontend/src/components/: Game.tsx  MatrixBackground.tsx  StatusBar.tsx  Terminal.tsx
frontend/src/data/: index.ts
frontend/src/features/: gameSlice.ts  terminalSlice.ts
frontend/src/hooks/: useTerminal.ts
frontend/src/store/: gameState.ts
frontend/src/styles/: Game.css  Terminal.css
frontend/src/types/: index.ts  terminal-hacker-core.d.ts
frontend/src/utils/: CommandProcessor.ts
frontend/src/wasm/: init.ts  rust_bridge.ts
